Fixed notification box not fitting to number of notifications, should probably add maximum later. Also made notifications show for inverse friends

--- a/app/assets/stylesheets/carpe.css
+++ b/app/assets/stylesheets/carpe.css
@@ -199,7 +199,6 @@ body
 #notif-panel
 {
 	position: absolute;
-    height: 140px;
     width: 250px;
     top: 50px;
     right: 15px;
